fixed layout issues

--- a/app-dev/styles/base/layout.css
+++ b/app-dev/styles/base/layout.css
@@ -2553,6 +2553,11 @@ article.message {
 			text-align: right;
 			min-width: 0;
 		}
+		.tabular > .f-list > li .cell.call-to-action {
+			position: absolute;
+			right: 0.8rem;
+		}
+
 
 		.tabular .cell.currency {
 			text-align: right;
